--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 .App {
   text-align: center;
   background-color: #121212; /* Dark background color */
   color: #ffffff; /* Light text color */
-  font-family: Arial, sans-serif;
+  font-family: Roboto, sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -25,7 +27,17 @@
 
 
 
+.transactions-table {
+  margin: 0 auto;
+  text-align: center;
+  border-collapse: collapse;
+}
 
+.transactions-table th, .transactions-table td {
+  padding: 10px;
+  text-align: left;
+  border: 1px solid #ddd;
+}
 
 .flex-container {
   display: flex;
