--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -7,11 +7,15 @@
   font-family: Roboto, sans-serif;
   margin: 0;
   padding: 0;
+  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 10vh;
+  min-height: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,13 +33,16 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-top: auto;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-
+.main-content {
+  flex: 1;
+}
 
 
 .transactions-table {
@@ -59,6 +66,7 @@
   border-radius: 5px;
   font-size: 16px;
   margin-right: 10px; 
+  margin-bottom: 10px;
 }
 
 .custom-button:hover {
