style input form

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -67,6 +67,7 @@
   font-size: 16px;
   margin-right: 10px; 
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .custom-button:hover {
@@ -123,4 +124,63 @@
     flex: 1 1 calc(100% - 1rem); /* Adjust for extra small screens */
     max-width: calc(100% - 1rem);
   }
+}
+
+.new-envelope-form {
+  background-color: #282c34;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 400px;
+  margin: 20px auto;
+  color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.new-envelope-form h2 {
+  margin-bottom: 20px;
+  font-size: 24px;
+  text-align: center;
+}
+
+.new-envelope-form form div {
+  margin-bottom: 15px;
+}
+
+.new-envelope-form label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.new-envelope-form input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.new-envelope-form input:focus {
+  border-color: #61dafb;
+  outline: none;
+}
+
+.new-envelope-form p {
+  color: #ff4d4d;
+  font-weight: bold;
+}
+
+.new-envelope-form button {
+  background-color: #61dafb;
+  color: #282c34;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  width: 100%;
+}
+
+.new-envelope-form button:hover {
+  background-color: #21a1f1;
 }
