--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 .App {
   text-align: center;
   background-color: #121212; /* Dark background color */
   color: #ffffff; /* Light text color */
-  font-family: Roboto, sans-serif;
+  font-family: Inter, sans-serif;
   margin: 0;
   padding: 0;
   height: 100%;
