--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -2,8 +2,8 @@
 
 .App {
   text-align: center;
-  background-color: #121212; /* Dark background color */
-  color: #ffffff; /* Light text color */
+  background-color: #13151a; 
+  color: #ffffff; 
   font-family: Inter, sans-serif;
   margin: 0;
   padding: 0;
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #23262d;
   min-height: 5vh;
   display: flex;
   flex-direction: column;
@@ -32,7 +32,7 @@
 }
 
 .App-footer {
-  background-color: #282c34;
+  background-color: #23262d;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -90,13 +90,14 @@
 }
 
 .flex-item {
-  background-color: #1e1e1e; /* Dark card background */
-  border-radius: 0.5rem; /* Rounded corners */
+  background-color: #23262d; 
+  border-radius: 7px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); /* Subtle shadow */
   padding: 1rem;
   transition: transform 0.2s;
   flex: 1 1 calc(25% - 1rem); /* Adjust the width of the cards */
   max-width: calc(25% - 1rem); /* Ensure cards fit within the container */
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
 }
 
 .flex-item:hover {
