--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -250,3 +250,37 @@
 .new-transaction-form button:hover {
   background-color: #0056b3;
 }
+
+.envelope-details {
+  display: flex;
+  padding: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.frame-content {
+  background-color: #23262d; /* Dark background color */
+  border-radius: 7px; /* Rounded corners */
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(255, 255, 255, 0.1); /* Add shadow and inset border */
+  padding: 1rem; /* Add padding inside the frame */
+  transition: transform 0.2s; /* Smooth transition for hover effect */
+  max-width: calc(100% - 2rem); /* Ensure it fits within the container */
+}
+
+@media (max-width: 1024px) {
+  .frame-content {
+    max-width: calc(100% - 2rem); /* Adjust for medium screens */
+  }
+}
+
+@media (max-width: 768px) {
+  .frame-content {
+    max-width: calc(100% - 2rem); /* Adjust for small screens */
+  }
+}
+
+@media (max-width: 640px) {
+  .frame-content {
+    max-width: calc(100% - 2rem); /* Adjust for extra small screens */
+  }
+}    
