--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -57,7 +57,8 @@
   border-collapse: collapse;
 }
 
-.transactions-table th, .transactions-table td {
+.transactions-table th, 
+.transactions-table td {
   padding: 10px;
   text-align: left;
   border: 1px solid #ddd;
@@ -133,7 +134,8 @@
   }
 }
 
-.new-envelope-form {
+.new-envelope-form,
+.update-envelope-form {
   background-color: #282c34;
   padding: 20px;
   border-radius: 8px;
@@ -143,23 +145,27 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.new-envelope-form h2 {
+.new-envelope-form h2,
+.update-envelope-form h2 {
   margin-bottom: 20px;
   font-size: 24px;
   text-align: center;
 }
 
-.new-envelope-form form div {
+.new-envelope-form form div,
+.update-envelope-form div {
   margin-bottom: 15px;
 }
 
-.new-envelope-form label {
+.new-envelope-form label,
+.update-envelope-form label {
   display: block;
   margin-bottom: 5px;
   font-weight: lighter;
 }
 
-.new-envelope-form input {
+.new-envelope-form input,
+.update-envelope-form input {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
@@ -167,17 +173,20 @@
   box-sizing: border-box;
 }
 
-.new-envelope-form input:focus {
+.new-envelope-form input:focus,
+.update-envelope-form input:focus {
   border-color: #61dafb;
   outline: none;
 }
 
-.new-envelope-form p {
+.new-envelope-form p,
+.update-envelope-form p {
   color: #ff4d4d;
   font-weight: normal;
 }
 
-.new-envelope-form button {
+.new-envelope-form button,
+.update-envelope-form button {
   background-color: #007bff;
   color: white;
   border: none;
@@ -188,7 +197,8 @@
   width: 100%;
 }
 
-.new-envelope-form button:hover {
+.new-envelope-form button:hover,
+.update-envelope-form button:hover {
   background-color: #0056b3;
 }
 
